Routing işlemi, kayıt olan kullanıcıya default rol atama, footer düzenleme

--- a/TraversalProject/Areas/Admin/Views/ContactUs/ContactUsDetails.cshtml
+++ b/TraversalProject/Areas/Admin/Views/ContactUs/ContactUsDetails.cshtml
@@ -15,8 +15,8 @@
         <h5 class="card-title">@Model.Subject</h5>
         <p class="card-text">@Model.MessageBody</p>
         <div class="btn-group">
-            <a href="/Admin/ContactUs/Index/" class="btn btn-outline-primary"><i class="fa-solid fa-backward"></i></a>
-            <a href="/Admin/ContactUs/ContactUsDelete/@Model.ContactUsID" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
+            <a href="/admin/contactus/index/" class="btn btn-outline-primary"><i class="fa-solid fa-backward"></i></a>
+            <a href="/admin/contactus/contactusdelete/@Model.ContactUsID" class="btn btn-outline-danger"><i class="fa-solid fa-trash"></i></a>
         </div>
     </div>
 </div>
