--- a/TraversalProject/Areas/Admin/Views/Dashboard/Arama.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Dashboard/Arama.cshtml
@@ -21,7 +21,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/About/Index ">@Html.Raw(@item.Title)</a>
+                                <a href="/admin/about/index ">@Html.Raw(@item.Title)</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -37,7 +37,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/User/Index ">@Html.Raw(@item.Name) kullanıcısı</a>
+                                <a href="/admin/user/index ">@Html.Raw(@item.Name) kullanıcısı</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Comment/Index ">@Html.Raw(@item.CommentUser) yorumu</a>
+                                <a href="/admin/comment/index ">@Html.Raw(@item.CommentUser) yorumu</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -69,7 +69,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Destination/Index">@Html.Raw(@item.City) rotası</a>
+                                <a href="/admin/destination/index">@Html.Raw(@item.City) rotası</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/ContactUs/Index ">@Html.Raw(@item.Subject) konulu mesaj</a>
+                                <a href="/admin/contactus/index ">@Html.Raw(@item.Subject) konulu mesaj</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Reservation/Index ">@ViewBag.Reservations</a>
+                                <a href="/admin/reservation/index ">@ViewBag.Reservations</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -117,7 +117,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Guide/Index ">@ViewBag.Guides</a>
+                                <a href="/admin/guide/index ">@ViewBag.Guides</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -133,7 +133,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Announcement/Index ">Duyuru Listesi</a>
+                                <a href="/admin/announcement/index ">Duyuru Listesi</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Newsletter/Index ">Abone Olanlar Listesi</a>
+                                <a href="/admin/newsletter/index ">Abone Olanlar Listesi</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
@@ -165,7 +165,7 @@
                     <ul class="simple-post-list m-0">
                         <li>
                             <div class="post-info">
-                                <a href="/Admin/Role/Index ">Rol Listesi</a>
+                                <a href="/admin/role/index ">Rol Listesi</a>
                                 <div class="post-meta">
                                 </div>
                             </div>
