--- a/TraversalProject/Areas/Admin/Views/Role/UserList.cshtml
+++ b/TraversalProject/Areas/Admin/Views/Role/UserList.cshtml
@@ -15,8 +15,8 @@
     {
         <tr>
             <td>@item.UserName</td>
-            <td><a href="/Admin/Role/AssignRole/@item.Id" class="btn btn-warning">Rol Ata</a></td>
+            <td><a href="/admin/role/assignrole/@item.Id" class="btn btn-warning">Rol Ata</a></td>
         </tr>
     }
 </table>
-<a href="/Admin/Role/Index/" class="btn btn-secondary">Rol Listesi</a>
+<a href="/admin/role/index/" class="btn btn-secondary">Rol Listesi</a>
