--- a/TraversalProject/Areas/Admin/Views/User/Index.cshtml
+++ b/TraversalProject/Areas/Admin/Views/User/Index.cshtml
@@ -28,13 +28,13 @@
             <td>@item.Name @item.Surname</td>
             <td>@item.UserName</td>
             <td>@item.Email</td>
-            <td><a href="/Admin/User/EditUser/@item.Id" class="btn btn-outline-success">Düzenle</a></td>
-            <td><a href="/Admin/User/DeleteUser/@item.Id" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="/Admin/User/CommentUser/@item.Id" class="btn btn-outline-info">Yorumlar</a></td>
-            <td><a href="/Admin/User/ReservationUser/@item.Id" class="btn btn-outline-secondary">Tur Geçmişi</a></td>
+            <td><a href="/admin/user/edituser/@item.Id" class="btn btn-outline-success">Düzenle</a></td>
+            <td><a href="/admin/user/deleteuser/@item.Id" class="btn btn-outline-danger">Sil</a></td>
+            <td><a href="/admin/user/commentuser/@item.Id" class="btn btn-outline-info">Yorumlar</a></td>
+            <td><a href="/admin/user/reservationuser/@item.Id" class="btn btn-outline-secondary">Tur Geçmişi</a></td>
         </tr>
     }
 </table>
 
-<a href="/Login/SignUp/" class="btn btn-outline-primary">Yeni Kullanıcı Oluştur</a>
+<a href="/login/signup/" class="btn btn-outline-primary">Yeni Kullanıcı Oluştur</a>
 
