--- a/TraversalProject/Areas/Admin/Views/User/ReservationUser.cshtml
+++ b/TraversalProject/Areas/Admin/Views/User/ReservationUser.cshtml
@@ -27,7 +27,7 @@
             <td>@item.Destination.City</td>
             <td>@item.PersonCount</td>
             <td>@(((DateTime)item.ReservationDate).ToString("dd-MMM-yyyy"))</td>
-            <td><a href="" class="btn btn-outline-primary">Detaylar</a></td>
+            <td><a href="#" class="btn btn-outline-primary">Detaylar</a></td>
         </tr>
     }
 </table>
