--- a/TraversalProject/Areas/Member/Views/Dashboard/MemberDashboard.cshtml
+++ b/TraversalProject/Areas/Member/Views/Dashboard/MemberDashboard.cshtml
@@ -66,37 +66,37 @@
         <div class="main-menu-content">
             <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
                 <li class=" nav-item">
-                    <a href="/Member/Dashboard/MemberDashboard/"><i class="ft-home"></i><span class="menu-title" data-i18n="">Dashboard</span></a>
+                    <a href="/member/dashboard/memberdashboard/"><i class="ft-home"></i><span class="menu-title" data-i18n="">Dashboard</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Profile/Index/"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">@localizer["Profilim"]</span></a>
+                    <a href="/member/profile/index/"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">@localizer["Profilim"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/NewReservation/"><i class="ft-navigation"></i><span class="menu-title" data-i18n="">@localizer["Yeni Rezervasyon"]</span></a>
+                    <a href="/member/reservation/newreservation/"><i class="ft-navigation"></i><span class="menu-title" data-i18n="">@localizer["Yeni Rezervasyon"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/MyCurrentReservation/"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">@localizer["Aktif Rezv."]</span></a>
+                    <a href="/member/reservation/mycurrentreservation/"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">@localizer["Aktif Rezv."]</span></a>
                 </li>
                 <li class="nav-item">
-                    <a href="/Member/Reservation/MyApprovalReservation/"><i class="ft-cloud"></i><span class="menu-title" data-i18n="">@localizer["Onay Bekleyen Rezv."]</span></a>
+                    <a href="/member/reservation/myapprovalreservation/"><i class="ft-cloud"></i><span class="menu-title" data-i18n="">@localizer["Onay Bekleyen Rezv."]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Reservation/MyOldReservation/"><i class="ft-clock"></i><span class="menu-title" data-i18n="">@localizer["Geçmiş Rezv."]</span></a>
+                    <a href="/member/reservation/myoldreservation/"><i class="ft-clock"></i><span class="menu-title" data-i18n="">@localizer["Geçmiş Rezv."]</span></a>
                 </li>   
                 <li class=" nav-item">
-                    <a href="/Member/Comment/Index/"><i class="ft-command"></i><span class="menu-title" data-i18n="">@localizer["Yorumlarım"]</span></a>
+                    <a href="/member/comment/index/"><i class="ft-command"></i><span class="menu-title" data-i18n="">@localizer["Yorumlarım"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/Destination/Index/"><i class="ft-map"></i><span class="menu-title" data-i18n="">@localizer["Tur Rotaları"]</span></a>
+                    <a href="/member/destination/index/"><i class="ft-map"></i><span class="menu-title" data-i18n="">@localizer["Tur Rotaları"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Member/LastDestinations/Index/"><i class="ft-navigation-2"></i><span class="menu-title" data-i18n="">@localizer["Son Rotalar"]</span></a>
+                    <a href="/member/lastdestinations/index/"><i class="ft-navigation-2"></i><span class="menu-title" data-i18n="">@localizer["Son Rotalar"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Default/Index/"><i class="ft-power"></i><span class="menu-title" data-i18n="">@localizer["Siteye Git"]</span></a>
+                    <a href="/default/index/"><i class="ft-power"></i><span class="menu-title" data-i18n="">@localizer["Siteye Git"]</span></a>
                 </li>
                 <li class=" nav-item">
-                    <a href="/Login/LogOut/"><i class="ft-lock"></i><span class="menu-title" data-i18n="">@localizer["Çıkış Yap"]</span></a>
+                    <a href="/login/logout/"><i class="ft-lock"></i><span class="menu-title" data-i18n="">@localizer["Çıkış Yap"]</span></a>
                 </li>
             </ul>
         </div>
