--- a/TraversalProject/Views/Admin/PartialSidebar.cshtml
+++ b/TraversalProject/Views/Admin/PartialSidebar.cshtml
@@ -1,134 +1,134 @@
 ﻿<ul class="menu-inner py-1">
     <!-- Dashboard -->
     <li class="menu-item">
-        <a href="/Admin/Dashboard/Index" class="menu-link">
+        <a href="/admin/dashboard/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-home-circle"></i>
             <div data-i18n="Analytics">Dashboard</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Profile/Index" class="menu-link">
+        <a href="/admin/profile/index" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-edit"></i>
             <div data-i18n="Analytics">Profil Ayarları</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Comment/Index" class="menu-link">
+        <a href="/admin/comment/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-comment"></i>
             <div data-i18n="Analytics">Yorumlar</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Destination/Index" class="menu-link">
+        <a href="/admin/destination/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-car"></i>
             <div data-i18n="Analytics">Rotalar</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/User/Index" class="menu-link">
+        <a href="/admin/user/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-user"></i>
             <div data-i18n="Analytics">Misafirler</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/ContactUs/Index/" class="menu-link">
+        <a href="/admin/contactUs/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-message-alt"></i>
             <div data-i18n="Analytics">Mesajlar</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Reservation/Index/" class="menu-link">
+        <a href="/admin/reservation/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-restaurant"></i>
             <div data-i18n="Analytics">Rezervasyonlar</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Guide/Index" class="menu-link">
+        <a href="/admin/guide/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-help-circle"></i>
             <div data-i18n="Analytics">Rehberlerimiz</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Role/Index/" class="menu-link">
+        <a href="/admin/role/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-key"></i>
             <div data-i18n="Analytics">Rol İşlemleri</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Announcement/Index" class="menu-link">
+        <a href="/admin/announcement/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-notification"></i>
             <div data-i18n="Analytics">Duyurular</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/About/Index" class="menu-link">
+        <a href="/admin/about/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-album"></i>
             <div data-i18n="Analytics">Hakkımızda</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Newsletter/Index" class="menu-link">
+        <a href="/admin/newsletter/index" class="menu-link">
             <i class="menu-icon tf-icons bx bx-envelope"></i>
             <div data-i18n="Analytics">Abone Olanlar</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/Mail/Index/" class="menu-link">
+        <a href="/admin/mail/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-mail-send"></i>
             <div data-i18n="Analytics">Mail Gönder</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/PdfReport/Index/" class="menu-link">
+        <a href="/pdfreport/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-file-pdf"></i>
             <div data-i18n="Analytics">Pdf Raporları</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Excel/Index/" class="menu-link">
+        <a href="/excel/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-report"></i>
             <div data-i18n="Analytics">Excel Raporları</div>
         </a>
     </li>
 
     <li class="menu-item">
-        <a href="/Admin/City/Index/" class="menu-link">
+        <a href="/admin/city/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-star"></i>
             <div data-i18n="Analytics">AJAX işlemleri</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/ApiExchange/Index/" class="menu-link">
+        <a href="/admin/apiexchange/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-money"></i>
             <div data-i18n="Analytics">API Exchange</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/ApiMovie/Index/" class="menu-link">
+        <a href="/admin/apimovie/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-movie"></i>
             <div data-i18n="Analytics">API Film</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Admin/BookingHotelSearch/Index/" class="menu-link">
+        <a href="/admin/bookinghotelsearch/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bxs-hotel"></i>
             <div data-i18n="Analytics">API B. Hotel Search</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Member/Dashboard/MemberDashboard" class="menu-link">
+        <a href="/member/dashboard/memberdashboard" class="menu-link">
             <i class="menu-icon tf-icons bx bx-ghost"></i>
             <div data-i18n="Analytics">Üye Paneli</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Default/Index/" class="menu-link">
+        <a href="/default/index/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-exit"></i>
             <div data-i18n="Analytics">Siteye git</div>
         </a>
     </li>
     <li class="menu-item">
-        <a href="/Login/LogOut/" class="menu-link">
+        <a href="/login/logout/" class="menu-link">
             <i class="menu-icon tf-icons bx bx-exit"></i>
             <div data-i18n="Analytics">Çıkış yap</div>
         </a>
