--- a/TraversalProject/Views/Contact/Index.cshtml
+++ b/TraversalProject/Views/Contact/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="container py-2">
             <h2 class="title">Bize Ulaşın</h2>
             <ul class="breadcrumbs-custom-path mt-2">
-                <li><a href="/Default/Index/">Ana Sayfa</a></li>
+                <li><a href="/default/index/">Ana Sayfa</a></li>
                 <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> İletişim Sayfası </li>
             </ul>
         </div>
