--- a/TraversalProject/Views/Destination/DestinationDetails.cshtml
+++ b/TraversalProject/Views/Destination/DestinationDetails.cshtml
@@ -10,7 +10,7 @@
             <div class="container">
                 <h2 class="title">Tur Detayları</h2>
                 <ul class="breadcrumbs-custom-path mt-2">
-                    <li><a href="/Default/Index/">Tur Detayları</a></li>
+                    <li><a href="/default/index/">Tur Detayları</a></li>
                     <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> Rehberin Yorumları </li>
                 </ul>
             </div>
