--- a/TraversalProject/Views/Destination/Index.cshtml
+++ b/TraversalProject/Views/Destination/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="container">
                 <h2 class="title">Ana Sayfa </h2>
                 <ul class="breadcrumbs-custom-path mt-2">
-                    <li><a href="/Default/Index/">Ana Sayfa</a></li>
+                    <li><a href="/default/index/">Ana Sayfa</a></li>
                     <li class="active"><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span> Tur Rotaları </li>
                 </ul>
             </div>
@@ -27,10 +27,10 @@
                     {
                         <div class="col-lg-4 col-md-4 col-6">
                             <div class="column">
-                                <a href="/Destination/DestinationDetails/@item.DestinationID">
+                                <a href="/destination/destinationdetails/@item.DestinationID">
                                     <img src="@item.Image" alt="" style="width:370px; height:300px" class="img-fluid"></a>
                                 <div class="info">
-                                    <h4><a href="/Destination/DestinationDetails/@item.DestinationID">@item.City</a></h4>
+                                    <h4><a href="/destination/destinationdetails/@item.DestinationID">@item.City</a></h4>
                                     <p>@item.DayNight</p>
                                     <div class="dst-btm">
                                         <h6 class="">Başlayan fiyatlar </h6>
