--- a/TraversalProject/Views/ErrorPage/Error404.cshtml
+++ b/TraversalProject/Views/ErrorPage/Error404.cshtml
@@ -20,7 +20,7 @@
         <br />
         <h3>Oooppsss! Aradığınız sayfa bulunamadı.</h3>
         <br />
-        <a class="buton" href="/Default/Index/">Anasayfaya Dön</a>
+        <a class="buton" href="/default/index/">Anasayfaya Dön</a>
     </div>
 </body>
 
