--- a/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
+++ b/TraversalProject/Views/LayoutPartial/_FooterPartial.cshtml
@@ -9,31 +9,28 @@
                             <div class="col-md-4 column">
                                 <h3>Acentamız</h3>
                                 <ul class="footer-gd-16">
-                                    <li><a href="/Default/Index/">Ana Sayfa</a></li>
-                                    <li><a href="about.html">Hakkımızda</a></li>
-                                    <li><a href="services.html">Hizmetler</a></li>
-                                    <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="contact.html">Bize Yazın</a></li>
+                                    <li><a href="/default/index/">Ana Sayfa</a></li>
+                                    <li><a href="/about/index/">Hakkımızda</a></li>
+                                    <li><a href="/destination/index/">Turlar</a></li>
+                                    <li><a href="/contact/index/">Bize Yazın</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 column mt-md-0 mt-4">
                                 <h3>Faydalı Linkler</h3>
                                 <ul class="footer-gd-16">
-                                    <li><a href="#url">Rotalar</a></li>
-                                    <li><a href="#url">Tur Rehbeleri</a></li>
-                                    <li><a href="#url">Görseller</a></li>
-                                    <li><a href="about.html">Çalışanlarımız</a></li>
-                                    <li><a href="#url">Paketlerimiz</a></li>
+                                    <li><a href="/destination/index/">Rotalar</a></li>
+                                    <li><a href="/guide/index/">Tur Rehbeleri</a></li>
+                                    <li><a href="/guide/index/">Çalışanlarımız</a></li>
+                                    <li><a href="/destination/index/">Paketlerimiz</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 column mt-md-0 mt-4">
                                 <h3>Hizmetlerimiz</h3>
                                 <ul class="footer-gd-16">
                                     <li><a href="#url">Güvenlik</a></li>
-                                    <li><a href="#url">Hizmet Şartları</a></li>
-                                    <li><a href="services.html">Hizmetler</a></li>
-                                    <li><a href="landing-single.html">Üye Girişi</a></li>
-                                    <li><a href="#url">Rehber Girişi</a></li>
+                                    <li><a href="/destination/index/">Hizmetler</a></li>
+                                    <li><a href="/login/signup/">Kayıt Ol</a></li>
+                                    <li><a href="/login/signin/">Üye Girişi</a></li>
                                 </ul>
                             </div>
                         </div>
