--- a/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_AdminNavbar/Default.cshtml
@@ -8,7 +8,7 @@
 
     <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
         <!-- Search -->
-        <form action="@Url.Action("Arama","Dashboard","Admin")" method="get">
+        <form action="@Url.Action("arama","dashboard","admin")" method="get">
             <div class="navbar-nav align-items-center">
                 <div class="nav-item d-flex align-items-center">
                     <i class="bx bx-search fs-4 lh-0"></i>
@@ -49,7 +49,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="/Admin/Profile/Index/">
+                        <a class="dropdown-item" href="/admin/profile/index/">
                             <i class="bx bx-cog me-2"></i>
                             <span class="align-middle">Profilim</span>
                         </a>
@@ -58,7 +58,7 @@
                         <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="/Login/LogOut/">
+                        <a class="dropdown-item" href="/login/logout/">
                             <i class="bx bx-power-off me-2"></i>
                             <span class="align-middle">Çıkış Yap</span>
                         </a>
