--- a/TraversalProject/Views/Shared/Components/_MemberLayoutNavbar/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberLayoutNavbar/Default.cshtml
@@ -11,7 +11,7 @@
 ﻿
 <ul class="nav navbar-nav float-right">
     <li class="dropdown dropdown-notification nav-item">
-        <a class="nav-link nav-link-label" href="/Member/Notification/Index/">
+        <a class="nav-link nav-link-label" href="/member/notification/index/">
             <i class="ficon ft-bell"> </i> <span class="badge badge-danger" id="badge">@ViewBag.announcementCount</span>
         </a>
 @*        <div class="dropdown-menu dropdown-menu-right">
@@ -40,15 +40,15 @@
                     </span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/Member/Profile/Index/">
+                <a class="dropdown-item" href="/member/profile/index/">
                     <i class="ft-user"></i> Profili Düzenle
                 </a>
-                <a class="dropdown-item" href="/Member/Notification/Index/"><i class="ft-bell"></i> Bildirimler</a>
-                <a class="dropdown-item" href="/Member/Reservation/MyCurrentReservation/"><i class="ft-check-square"></i> Aktif Rezervasyonlarım</a>
-                <a class="dropdown-item" href="/Member/Reservation/MyOldReservation/"><i class="ft-download"></i> Geçmiş Rezervasyonlar</a>
-                <a class="dropdown-item" href="/Member/Reservation/MyApprovalReservation/"><i class="ft-clock"></i> Onay  Bekleyenler</a>
+                <a class="dropdown-item" href="/member/notification/index/"><i class="ft-bell"></i> Bildirimler</a>
+                <a class="dropdown-item" href="/member/reservation/mycurrentreservation/"><i class="ft-check-square"></i> Aktif Rezervasyonlarım</a>
+                <a class="dropdown-item" href="/member/reservation/myoldreservation/"><i class="ft-download"></i> Geçmiş Rezervasyonlar</a>
+                <a class="dropdown-item" href="/member/reservation/myapprovalreservation/"><i class="ft-clock"></i> Onay  Bekleyenler</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/Login/LogOut/"><i class="ft-power"></i> Çıkış Yap</a>
+                <a class="dropdown-item" href="/login/logout/"><i class="ft-power"></i> Çıkış Yap</a>
             </div>
         </div>
     </li>
