--- a/TraversalProject/Views/Shared/Components/_MemberStatistic2/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_MemberStatistic2/Default.cshtml
@@ -34,8 +34,8 @@
                 </a>
             </div>
             <div class="card-body">
-                <a href="/Member/Reservation/NewReservation/" class="card-link">Rezervasyon Yap</a>
-                <a href="/Destination/Index/" class="card-link">Turlar</a>
+                <a href="/member/reservation/newreservation/" class="card-link">Rezervasyon Yap</a>
+                <a href="/destination/index/" class="card-link">Turlar</a>
             </div>
         </div>
         <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted">
