--- a/TraversalProject/Views/Shared/Components/_ProfileInformation/Default.cshtml
+++ b/TraversalProject/Views/Shared/Components/_ProfileInformation/Default.cshtml
@@ -6,7 +6,7 @@
                     <h6 class="mb-0">Profil Bilgileri</h6>
                 </div>
                 <div class="col-md-4 text-end">
-                    <a href="/Member/Profile/Index/">
+                    <a href="/member/profile/index/">
                         <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Profile"></i>
                     </a>
                 </div>
