--- a/TraversalProject/Views/Comment/AddComment.cshtml
+++ b/TraversalProject/Views/Comment/AddComment.cshtml
@@ -5,7 +5,7 @@
    @* <p class="mb-4">
         İşaretli alanları doldurmanız gerekmektedir. *
     </p>*@
-    <form method="post" asp-action="AddComment" asp-controller="Comment">
+    <form method="post" asp-action="addcomment" asp-controller="comment">
         <div class="input-grids row">
             <div class="form-group col-lg-6">
                 <input type="hidden" name="AppUserID" class="form-control" placeholder="AppUserID*" value="@ViewBag.userID" required="">
