--- a/TraversalProject/Views/Login/SignIn.cshtml
+++ b/TraversalProject/Views/Login/SignIn.cshtml
@@ -68,7 +68,7 @@
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							<a href="/PasswordChange/ForgetPassword/">Şifremi Unuttum</a>
+							<a href="/passwordchange/forgetpassword/">Şifremi Unuttum</a>
 						</span>
 						@*<a class="txt2" href="#">
 							Username / Password?
@@ -76,7 +76,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="/Login/SignUp/">
+						<a class="txt2" href="/login/signup/">
 							Bir hesabınız yok mu?
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
